header and footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 </head>
 
 <body>
-    
+
+    <header class="header-container">
+
+    </header>
+
+    <footer class="footer-container">
+        <p class="copyright">
+            Em Desenvolvimento por Ailton César | Copyright (c) 2022 zeld4coffee
+        </p>
+    </footer>
+
 </body>
 
 </html>
