--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 </head>
 
 <body>
-
     <header class="header-container">
-
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="./img/icon/icon_loja_black.png" alt="Logo VaptVupt" width="30" height="24"
+                    class="d-inline-block align-text-top">VaptVupt</a>
+        </div>
     </header>
 
     <footer class="footer-container">
