logo added in header

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
 <body>
     <header class="header-container">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="./img/icon/icon_loja_black.png" alt="Logo VaptVupt" width="30" height="24"
-                    class="d-inline-block align-text-top">VaptVupt</a>
-        </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="./img/icon/icon_loja_black.png" alt="" width="50" height="45">
+            </div>
     </header>
 
     <footer class="footer-container">
