--- a/index.html
+++ b/index.html
@@ -18,18 +18,63 @@
 
 <body>
     <header class="header-container">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
                 <img src="./img/icon/icon_loja_black.png" alt="" width="50" height="45">
-            </div>
+        </div>
     </header>
+
+    <div class="carousel-container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/carousel/videogame.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Adquira aqui o seu Nintendo Switch</h5>
+                        <p>Console híbrido ideal para jogar em qualquer lugar</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carousel/smartphone.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Adquira aqui o seu Xiaomi Redmi Note 8</h5>
+                        <p>Potência, Beleza e Custo beneficio na palma de sua mão!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carousel/mouse.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Adquira aqui o seu mouse HyperX</h5>
+                        <p>Mais precisão e leveza para os seus headshots!</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 
     <footer class="footer-container">
         <p class="copyright">
             Em Desenvolvimento por Ailton César | Copyright (c) 2022 zeld4coffee
         </p>
     </footer>
-
 </body>
 
 </html>
